# ai_client

./: .gitignore  .pnp.cjs  README.md  audio_memo.txt  bun.lockb  memo.txt  package-lock.json  package.json  pnpm-lock.yaml  todo.txt
src/: App.vue  Assistants.vue  Main.vue  OpenAIFiles.vue  Samples.vue  Settings.vue  constants.js  main.js  markdown.scss  styles.scss
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: assistants.rs  assistants_audio_speech.rs  assistants_audio_transcribe.rs  assistants_audio_translate.rs  assistants_code_interpreter.rs  assistants_example.rs  assistants_file_search.rs  assistants_stream.rs  assistants_tool_calls.rs  assistants_vision_chat.rs  audio.rs  chat_completion.rs  constants.rs  embedding.rs  main.rs  open_ai_files.rs  util.rs
src-tauri/src/infrastracture/: error_handler.rs  logging.rs  mod.rs
src-tauri/src/models/: chat.rs  mod.rs  open_ai.rs
