[package]
name = "ai_client"
version = "0.0.2"
description = "A ChatGPT Client Tauri App"
authors = ["yuna"]
license = ""
repository = ""
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "1.2", features = [] }

[dependencies]
tauri = { version = "1.2", features = ["shell-open"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
reqwest = { version = "0.11.15", features = [ "blocking",  "json", "rustls-tls", "multipart", "stream" ] }
anyhow = "1.0.70"
futures = "0.3.27"
markdown = "1.0.0-alpha.9"
toml = "0.7.3"
uuid = "1.3.2"
chrono = "0.4.24"

[features]
# this feature is used for production builds or when `devPath` points to the filesystem
# DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]
