[package]
name = "ai_client"
version = "0.1.4"
description = "A ChatGPT Client Tauri App"
authors = ["yuna"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
reqwest = { version = "0.11.24", features = [
    "blocking",
    "json",
    "rustls-tls",
    "multipart",
    "stream",
] }
anyhow = "1.0.88"
futures = "0.3.30"
markdown = "1.0.0-alpha.18"
toml = "0.8.19"
uuid = "1.10.0"
chrono = "0.4.33"
sled = "0.34.7"
once_cell = "1.19.0"
tokio = "1.40.0"
rand = "0.8.5"
async-openai = "0.24.0"
base64 = "0.22.1"
bytes = "1.7.1"
mime_guess = "2.0.5"
tempfile = "3.12.0"
tauri-plugin-shell = "2"
tauri-plugin-dialog = "2"

[features]
# this feature is used for production builds or when `devPath` points to the filesystem
# DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]
